# OpenGR

./: .gitignore  .gitmodules  CMakeLists.txt  appveyor.yml  package.xml
.github/workflows/: pull-request-ci.yml
apps/: CMakeLists.txt
apps/ExtPointBinding/ext/: pointadapter_extlib1.hpp  pointadapter_extlib2.hpp
apps/io/: CMakeLists.txt
apps/io/gr/io/: io.h  io.hpp  io_ply.h
cmake/: Config.cmake.in
doc/: Compilation.md
src/gr/accelerators/: kdtree.h  normalHealSet.h  normalset.h  utils.h
src/gr/accelerators/pairExtraction/: intersectionFunctor.h
src/gr/algorithms/: PointPairFilter.h  congruentSetExplorationBase.hpp  matchBase.h  matchBase.hpp
src/gr/utils/: geometry.h  logger.h  registrationMetrics.h  shared.h
tests/: CMakeLists.txt  io.cc  matching.cc  matching3pcs.cc  testing.h
tests/externalAppTest/: CMakeLists.txt
